--- a/css/responsive.css
+++ b/css/responsive.css
@@ -60,9 +60,9 @@
       
       h3 {
         text-align: center;
-        margin-top: 30px;
         font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
           "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+        top: 1px;
       }
       
       ul {
@@ -101,13 +101,14 @@
       
       
       .videos-conf video {
-        width: 140px;
-        height: 45px;
+        width: 180px;
+        height: 100px;
         position: relative;
         right: 10px;
-        bottom: 40px;
+        bottom: 50px;
         left: 0px;
-        margin: 20px;
+        top: 1px;
+        margin: 5px
       }
       
       .videos-conf h3{
@@ -116,17 +117,10 @@
         left: 0px;
         right: 50px;
         font-size: 8px;
+        top: 5px;
       }
       
-      .videos-conf li{
-        color: black;
-        background-color: white;
-        margin: 5px;
-        border-style: solid;
-        border-radius: 10px;
-        width: 180px;
-        height: 70px;
-      }
+
       
       .videos-conf li:hover{
         transform: scale(1.1);
