--- a/css/style.css
+++ b/css/style.css
@@ -7,25 +7,56 @@ body {
   background-color: rgb(246, 173, 173);
 }
 
-.pag.inicio h2{
-position:relative;
-top: 50px;
-}
-
-.card-nosotros {
-  width: 220px;
-  height: 160px;
+header h1 {
+  background-color: black;
+  color: aliceblue;
+  width: 100%;
   text-align: left;
+  display: flex;
+  align-items: center;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+header h1 img {
+  width: 70px;
+  height: 50px;
+}
+header .menu-principal img {
+  background-color: rgb(0, 0, 0);
+  width: 30px;
+  height: 30px;
   position: relative;
-  bottom: 10px;
   left: 0px;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 20px;
+}
+header nav {
+  text-align: right;
+  background-color: black;
+  width: 100%;
+}
+header nav a {
+  font-size: 15px;
+  text-decoration: none;
+  color: black;
+  margin-left: 5px;
+  margin-right: 5px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  text-align: right;
+}
+header .link :hover {
+  background-color: rgb(252, 252, 252);
+  color: rgb(0, 0, 0);
+}
+header .link a {
+  background-color: rgb(197, 207, 201);
+  border-radius: 2px;
+  padding: 1px;
+  margin: 5px;
 }
 
-
-img {
+main .pag-inicio h2 {
+  position: relative;
+  top: 50px;
+}
+main img {
   width: 550px;
   height: 400px;
   text-align: left;
@@ -35,108 +66,103 @@ img {
   position: relative;
   left: 150px;
 }
+main p {
+  color: black;
+  font-size: 15px;
+  text-align: center;
+  margin: 30px;
+  margin-top: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+main h2 {
+  text-align: center;
+  margin-top: 50px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  background-color: rgb(226, 202, 202);
+}
+main h2 #videoprincipal {
+  width: 100%;
+}
+main h3 {
+  text-align: center;
+  margin-top: 30px;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+main ul {
+  list-style-type: none;
+}
+main li {
+  list-style-type: none;
+}
+main .icons {
+  width: 30px;
+  height: 30px;
+  position: relative;
+  left: 0px;
+  margin: 0%;
+  padding: 0%;
+}
+main iframe {
+  width: 100px;
+  height: 90px;
+  position: relative;
+  left: 0px;
+  top: 30px;
+  border-radius: 10%;
+}
+main .contacto-config p {
+  text-align: left;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+main .contacto-config input {
+  border-radius: 5px;
+  text-align: center;
+}
+main .contacto-config label {
+  margin-left: 30px;
+  border-radius: 5px;
+}
+main .contacto-config #opciones {
+  margin-left: 30px;
+  border-radius: 5px;
+}
+main .contacto-config textarea {
+  margin-left: 30px;
+  border-radius: 5px;
+}
 
 .card {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
 }
-
+.card :hover {
+  transform: scale(1.1);
+}
 .card p {
+  color: black;
+  background-color: white;
+  margin: 20px;
+  border-style: solid;
+  border-radius: 10px;
+  width: 240px;
+  height: 220px;
   display: grid;
   justify-content: center;
   flex-wrap: wrap;
+  font-size: 20px;
 }
-
-.card p:hover{
-  transform: scale(1.1);
-}
-
-#videoprincipal {
-  width: 100%;
-}
-
-p {
-  color: black;
-  font-size: 15px;
-  text-align: center;
-  margin: 30px;
-  margin-top: 30px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  }
-
-a {
-  font-size: 15px;
-  text-decoration: none;
-  color: black;
-  margin-left: 5px;
-  margin-right: 5px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  text-align: right;
-}
-
-.navegadores {
-  text-align: right;
-}
-
-h1 {
-  background-color: black;
-  color: aliceblue;
-  width: 100%;
+.card .card-nosotros {
+  width: 200px;
+  height: 140px;
   text-align: left;
-  display: flex;
-  align-items: center;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-h2 {
-  text-align: center;
-  margin-top: 50px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background-color: rgb(226, 202, 202);
-}
-
-body header h1 img {
-  width: 70px;
-  height: 50px;
-}
-
-h3 {
-  text-align: center;
-  margin-top: 30px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
-ul {
-  list-style-type: none;
-}
-
-li {
-  list-style-type: none;
-}
-
-
-body section h2 video source {
-  width: 100%;
-}
-
-nav {
-  text-align: right;
-  background-color: black;
-  width: 100%;
-}
-
-.menu-principal img {
-  background-color: rgb(0, 0, 0);
-  width: 30px;
-  height: 30px;
   position: relative;
+  bottom: 0px;
   left: 0px;
+  margin: 20px;
+  padding: 10px;
+  border-radius: 20px;
 }
 
 .videos-conf {
@@ -148,154 +174,35 @@ nav {
   position: relative;
   bottom: 0px;
 }
-
-
-
 .videos-conf video {
-  width: 500px;
-  height: 400px;
+  width: 490px;
+  height: 380px;
   position: relative;
-  bottom: 80px;
-  left: 0px;
+  bottom: 70px;
+  left: 5px;
   right: 50px;
   margin: 20px;
+  border-radius: 10px;
 }
-
-.videos-conf h3{
+.videos-conf h3 {
   position: relative;
   bottom: 10px;
   left: 0px;
   right: 50px;
 }
-
-.videos-conf li{
+.videos-conf li {
   color: black;
   background-color: white;
   margin: 20px;
   border-style: solid;
   border-radius: 10px;
-  width: 550px;
-  height: 410px;
+  width: 539px;
+  height: 400px;
 }
-
-.videos-conf li:hover{
+.videos-conf li :hover {
   transform: scale(1.1);
 }
-.card p {
-  color: black;
-  background-color: white;
-  margin: 20px;
-  border-style: solid;
-  border-radius: 10px;
-  width: 240px;
-  height: 220px;
-}
 
-.icons {
-  width: 30px;
-  height: 30px;
-  position: relative;
-  left: 0px;
-  margin: 0%;
-  padding: 0%;
-}
+/* @import './medias-queries/media-desktop'; */
 
-#conteItemsCarrusel {
-  height: 730px;
-  width: 900px;
-  overflow: hidden;
-}
-
-.itemCarrusel {
-  height: 100%;
-  position: relative;
-}
-
-.tarjeraCarrusel {
-  height: 100%;
-}
-
-.flechasCarrusel {
-  position: absolute;
-  left: 5px;
-  top: 0;
-  height: 450px;
-  width: 600px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.flechasCarrusel a i img {
-  width: 15px;
-  height: 20px;
-  border-radius: 20px;
-  background-color: aliceblue;
-}
-
-#contePuntos{
-  display: flex;
-  justify-content: space-around;
-  width: 100px;
-  align-items: center;
-  position: relative;
-  left: 390px;
-  bottom: 290px;
-}
-
-#contePuntos a {
-  font-size:  1.5em;
-  font-style: none;
-  color: grey;
-  align-items: center;
-}
-
-iframe {
-width: 500px;
-height: 400px;
-display: block;
-flex-wrap: wrap;
-position: relative;
-left: 850px;
-bottom: 730px;
-align-items: center;
-}
-
-.link a{
-  background-color: rgb(197, 207, 201);
-  border-radius: 2px;
-  padding: 1px;
-  margin: 5px;
-}
-
-.link a:hover{
-  background-color: rgb(252, 252, 252);
-  color: rgb(0, 0, 0);
-}
-
-
-.contacto-config p{
-  text-align: left;
-margin-top: 20px;
-margin-bottom: 10px;
-}
-
-input {
-  border-radius: 5px;
-  text-align: center;
-}
-
-label {
-  margin-left: 30px;
-  border-radius: 5px;
-}
-
-#opciones{
-  margin-left: 30px;
-  border-radius: 5px;
-}
-
-textarea{
-  margin-left: 30px;
-  border-radius: 5px;
-}
+/*# sourceMappingURL=style.css.map */
