--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -42,6 +42,7 @@ header{
         :hover {
             background-color: rgb(252, 252, 252);
             color: rgb(0, 0, 0);
+            transition: 1s;
           }  
         a{
             background-color: rgb(197, 207, 201);
