--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,8 +1,6 @@
-@import './base/reset';
-@import './layout/header';
-@import './layout/main';
-@import './components/cards';
-@import './components/videos';
-/* @import './medias-queries/media-desktop'; */
-@import './medias-queries/media-mobile';
-@import './medias-queries/media-tablet';
+@import "./base/reset";
+@import "./layout/header";
+@import "./layout/main";
+@import "./medias-queries/media-desktop";
+@import "./medias-queries/media-tablet";
+@import "./medias-queries/media-mobile"; 
