--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
   background-color: rgb(246, 173, 173);
 }
 
+#videoprincipal {
+  width: 100%;
+}
+
 header h1 {
   background-color: black;
   color: aliceblue;
@@ -133,79 +137,594 @@ main .contacto-config textarea {
   border-radius: 5px;
 }
 
-.card {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+/* dextop */
+@media screen and (min-width: 1024px) {
+  header h1 {
+    background-color: black;
+    color: aliceblue;
+    font-size: 40px;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  header h1 img {
+    width: 70px;
+    height: 50px;
+  }
+  header .menu-principal img {
+    background-color: rgb(0, 0, 0);
+    width: 50px;
+    height: 50px;
+    position: relative;
+    left: 0px;
+    margin: 5px;
+  }
+  header nav {
+    text-align: right;
+    background-color: black;
+    width: 100%;
+  }
+  header nav a {
+    font-size: 15px;
+    text-decoration: none;
+    color: black;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-align: right;
+  }
+  header .link a {
+    background-color: rgb(197, 207, 201);
+    border-radius: 2px;
+    padding: 1px;
+    margin: 5px;
+  }
+  header .link a :hover {
+    background-color: rgb(252, 252, 252);
+    color: rgb(0, 0, 0);
+  }
+  main .pag-inicio h2 {
+    position: relative;
+    top: 0px;
+  }
+  main img {
+    width: 550px;
+    height: 400px;
+    text-align: left;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    position: relative;
+    left: 135px;
+  }
+  main p {
+    color: black;
+    font-size: 15px;
+    text-align: center;
+    margin: 30px;
+    margin-top: 30px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  main h2 {
+    text-align: center;
+    margin-top: 0px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(226, 202, 202);
+  }
+  main h3 {
+    text-align: center;
+    margin-top: 30px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  main ul {
+    list-style-type: none;
+  }
+  main li {
+    list-style-type: none;
+  }
+  main .icons {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    left: 0px;
+    margin: 0%;
+    padding: 0%;
+  }
+  main iframe {
+    width: 100px;
+    height: 90px;
+    position: relative;
+    left: 0px;
+    top: 30px;
+    border-radius: 10%;
+  }
+  main .contacto-config p {
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  main .contacto-config input {
+    border-radius: 5px;
+    text-align: center;
+  }
+  main .contacto-config label {
+    margin-left: 30px;
+    border-radius: 5px;
+  }
+  main .contacto-config #opciones {
+    margin-left: 30px;
+    border-radius: 5px;
+  }
+  main .contacto-config textarea {
+    margin-left: 30px;
+    border-radius: 5px;
+  }
+  main .videos-conf {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 10px;
+    position: relative;
+    bottom: 0px;
+  }
+  main .videos-conf video {
+    width: 490px;
+    height: 380px;
+    position: relative;
+    bottom: 70px;
+    left: 5px;
+    right: 50px;
+    margin: 20px;
+    border-radius: 10px;
+  }
+  main .videos-conf h3 {
+    position: relative;
+    bottom: 10px;
+    left: 0px;
+    right: 50px;
+  }
+  main .videos-conf li {
+    color: black;
+    background-color: white;
+    margin: 20px;
+    border-style: solid;
+    border-radius: 10px;
+    width: 539px;
+    height: 400px;
+  }
+  main .videos-conf li :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  main .card :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card p {
+    color: black;
+    background-color: white;
+    margin: 20px;
+    border-style: solid;
+    border-radius: 10px;
+    width: 240px;
+    height: 220px;
+    display: grid;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 20px;
+  }
+  main .card .card-nosotros {
+    width: 200px;
+    height: 140px;
+    text-align: left;
+    position: relative;
+    bottom: 0px;
+    left: 0px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+  }
 }
-.card :hover {
-  transform: scale(1.1);
-  transition: 1s;
+/* Tablet */
+@media screen and (min-width: 501px) and (max-width: 960px) {
+  header h1 {
+    background-color: black;
+    color: aliceblue;
+    font-size: 30px;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  header .menu-principal img {
+    background-color: rgb(0, 0, 0);
+    width: 40px;
+    height: 40px;
+    position: relative;
+    left: 0px;
+    margin: 5px;
+  }
+  header nav {
+    text-align: right;
+    background-color: black;
+    width: 100%;
+  }
+  header nav a {
+    font-size: 12px;
+    text-decoration: none;
+    color: black;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-align: right;
+  }
+  header .link a {
+    background-color: rgb(197, 207, 201);
+    border-radius: 2px;
+    padding: 1px;
+    margin: 5px;
+  }
+  header .link a :hover {
+    background-color: rgb(252, 252, 252);
+    color: rgb(0, 0, 0);
+  }
+  main .pag-inicio h2 {
+    position: relative;
+    top: 0px;
+  }
+  main img {
+    width: 450px;
+    height: 300px;
+    text-align: left;
+    margin: 10px;
+    padding: 0px;
+    border-radius: 10px;
+    position: relative;
+    left: 75px;
+  }
+  main p {
+    color: black;
+    font-size: 12px;
+    text-align: center;
+    margin: 30px;
+    margin-top: 30px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  main h2 {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 0px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(226, 202, 202);
+  }
+  main h3 {
+    font-size: 15px;
+    text-align: center;
+    margin-top: 10px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  main ul {
+    list-style-type: none;
+  }
+  main li {
+    list-style-type: none;
+    font-size: 10px;
+  }
+  main .icons {
+    width: 25px;
+    height: 25px;
+    position: relative;
+    left: 0px;
+    margin: 0%;
+    padding: 0%;
+  }
+  main iframe {
+    width: 60px;
+    height: 50px;
+    position: relative;
+    left: 0px;
+    top: 20px;
+    border-radius: 10%;
+  }
+  main .contacto-config p {
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 12px;
+  }
+  main .contacto-config input {
+    border-radius: 5px;
+    text-align: center;
+    font-size: 12px;
+  }
+  main .contacto-config label {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 12px;
+  }
+  main .contacto-config #opciones {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 12px;
+  }
+  main .contacto-config textarea {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 12px;
+  }
+  main .videos-conf {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 10px;
+    padding: 10px;
+    position: relative;
+    bottom: 0px;
+  }
+  main .videos-conf video {
+    width: 250px;
+    height: 150px;
+    position: relative;
+    bottom: 30px;
+    left: -1px;
+    margin: 20px;
+    border-radius: 10px;
+  }
+  main .videos-conf h3 {
+    position: relative;
+    bottom: 10px;
+    left: 0px;
+    right: 50px;
+  }
+  main .videos-conf li {
+    color: black;
+    background-color: white;
+    margin: 10px;
+    border-style: solid;
+    border-radius: 10px;
+    width: 289px;
+    height: 177px;
+  }
+  main .videos-conf li :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  main .card :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card p {
+    color: black;
+    background-color: white;
+    margin: 20px;
+    border-style: solid;
+    border-radius: 10px;
+    width: 200px;
+    height: 160px;
+    display: grid;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 15px;
+  }
+  main .card .card-nosotros {
+    width: 160px;
+    height: 115px;
+    text-align: left;
+    position: relative;
+    bottom: 15px;
+    left: 0px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+  }
 }
-.card p {
-  color: black;
-  background-color: white;
-  margin: 20px;
-  border-style: solid;
-  border-radius: 10px;
-  width: 240px;
-  height: 220px;
-  display: grid;
-  justify-content: center;
-  flex-wrap: wrap;
-  font-size: 20px;
+/* Mobile */
+@media screen and (max-width: 500px) {
+  header h1 {
+    background-color: black;
+    color: aliceblue;
+    font-size: 20px;
+    width: 100%;
+    text-align: left;
+    display: flex;
+    align-items: center;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  header .menu-principal img {
+    background-color: rgb(0, 0, 0);
+    width: 20px;
+    height: 20px;
+    position: relative;
+    left: 0px;
+    margin: 5px;
+  }
+  header nav {
+    text-align: right;
+    background-color: black;
+    width: 100%;
+  }
+  header nav a {
+    font-size: 7px;
+    text-decoration: none;
+    color: black;
+    margin-left: 5px;
+    margin-right: 5px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  header .link a {
+    background-color: rgb(196, 204, 198);
+    border-radius: 2px;
+    padding: 1px;
+    margin: 5px;
+    width: 50px;
+  }
+  header .link a :hover {
+    background-color: rgb(252, 252, 252);
+    color: rgb(0, 0, 0);
+  }
+  main .pag-inicio h2 {
+    position: relative;
+    top: 0px;
+  }
+  main img {
+    width: 200px;
+    height: 150px;
+    text-align: left;
+    margin: 10px;
+    padding: 0px;
+    border-radius: 10px;
+    position: relative;
+    left: 40px;
+  }
+  main p {
+    color: black;
+    font-size: 10px;
+    text-align: center;
+    margin: 30px;
+    margin-top: 15px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  }
+  main h2 {
+    text-align: center;
+    font-size: 15px;
+    margin-top: 20px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(226, 202, 202);
+  }
+  main h3 {
+    text-align: center;
+    font-size: 10px;
+    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-top: 0px;
+  }
+  main ul {
+    list-style-type: none;
+  }
+  main li {
+    list-style-type: none;
+    font-size: 10px;
+  }
+  main .icons {
+    width: 30px;
+    height: 30px;
+    position: relative;
+    left: 0px;
+    margin: 0%;
+    padding: 0%;
+  }
+  main iframe {
+    width: 60px;
+    height: 40px;
+    position: relative;
+    left: 0px;
+    top: 15px;
+    border-radius: 10%;
+  }
+  main .contacto-config p {
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 10px;
+  }
+  main .contacto-config input {
+    border-radius: 5px;
+    text-align: center;
+    font-size: 10px;
+  }
+  main .contacto-config label {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 10px;
+  }
+  main .contacto-config #opciones {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 10px;
+  }
+  main .contacto-config textarea {
+    margin-left: 30px;
+    border-radius: 5px;
+    font-size: 10px;
+  }
+  main .videos-conf {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 0px;
+    position: relative;
+    bottom: 0px;
+  }
+  main .videos-conf video {
+    width: 180px;
+    height: 100px;
+    position: relative;
+    right: 10px;
+    bottom: 50px;
+    left: 0px;
+    top: 1px;
+    margin: 5px;
+    border-radius: 10px;
+  }
+  main .videos-conf h3 {
+    position: relative;
+    bottom: 20px;
+    left: 0px;
+    right: 50px;
+    font-size: 8px;
+    top: 5px;
+  }
+  main .videos-conf li :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+  main .card :hover {
+    transform: scale(1.1);
+    transition: 1s;
+  }
+  main .card p {
+    color: black;
+    background-color: white;
+    margin: 20px;
+    border-style: solid;
+    border-radius: 10px;
+    width: 90px;
+    height: 80px;
+    display: grid;
+    justify-content: center;
+    flex-wrap: wrap;
+    font-size: 8px;
+  }
+  main .card .card-nosotros {
+    width: 75px;
+    height: 55px;
+    text-align: left;
+    position: relative;
+    bottom: 20px;
+    left: 0px;
+    margin: 20px;
+    padding: 10px;
+    border-radius: 20px;
+  }
 }
-.card .card-nosotros {
-  width: 200px;
-  height: 140px;
-  text-align: left;
-  position: relative;
-  bottom: 0px;
-  left: 0px;
-  margin: 20px;
-  padding: 10px;
-  border-radius: 20px;
-}
-
-.videos-conf {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 10px;
-  padding: 10px;
-  position: relative;
-  bottom: 0px;
-}
-.videos-conf video {
-  width: 490px;
-  height: 380px;
-  position: relative;
-  bottom: 70px;
-  left: 5px;
-  right: 50px;
-  margin: 20px;
-  border-radius: 10px;
-}
-.videos-conf h3 {
-  position: relative;
-  bottom: 10px;
-  left: 0px;
-  right: 50px;
-}
-.videos-conf li {
-  color: black;
-  background-color: white;
-  margin: 20px;
-  border-style: solid;
-  border-radius: 10px;
-  width: 539px;
-  height: 400px;
-}
-.videos-conf li :hover {
-  transform: scale(1.1);
-  transition: 1s;
-}
-
-/* @import './medias-queries/media-desktop'; */
 
 /*# sourceMappingURL=style.css.map */
