--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+/* Variables */
+/* mixin */
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  background-color: rgb(246, 173, 173);
+  height: 100vh;
+  margin: 0;
+  background: linear-gradient(to bottom, lightblue, white, lightblue);
 }
 
 #videoprincipal {
@@ -147,7 +151,7 @@ main .contacto-config textarea {
     text-align: left;
     display: flex;
     align-items: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   header h1 img {
     width: 70px;
@@ -172,13 +176,15 @@ main .contacto-config textarea {
     color: black;
     margin-left: 5px;
     margin-right: 5px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     text-align: right;
   }
   header .link a {
     background-color: rgb(197, 207, 201);
     border-radius: 2px;
     padding: 1px;
+    position: relative;
+    bottom: 5px;
     margin: 5px;
   }
   header .link a :hover {
@@ -189,15 +195,17 @@ main .contacto-config textarea {
     position: relative;
     top: 0px;
   }
-  main img {
+  main .carousel-inner img {
     width: 550px;
     height: 400px;
-    text-align: left;
     margin: 20px;
     padding: 10px;
-    border-radius: 10px;
     position: relative;
-    left: 135px;
+    left: 140px;
+    color: black;
+    background-color: white;
+    border-style: solid;
+    border-radius: 10px;
   }
   main p {
     color: black;
@@ -205,18 +213,21 @@ main .contacto-config textarea {
     text-align: center;
     margin: 30px;
     margin-top: 30px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   main h2 {
     text-align: center;
     margin-top: 0px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    background-color: rgb(226, 202, 202);
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(236, 236, 236);
+    font-size: 25px;
   }
   main h3 {
     text-align: center;
     margin-top: 30px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #08f;
   }
   main ul {
     list-style-type: none;
@@ -260,6 +271,43 @@ main .contacto-config textarea {
   main .contacto-config textarea {
     margin-left: 30px;
     border-radius: 5px;
+  }
+  @keyframes moverAuto {
+    100% {
+      transform: translateX(900px);
+    }
+  }
+  @keyframes moverEquipaje {
+    0% {
+      transform: rotate(-5deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    100% {
+      transform: translateX(5deg);
+    }
+  }
+  main .contacto-config .icons-auto {
+    animation-name: moverAuto;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: fixed;
+    bottom: 450px;
+    left: 700px;
+    width: 150px;
+    height: 80px;
+  }
+  main .contacto-config .icons-equipaje {
+    animation-name: moverEquipaje;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    position: fixed;
+    bottom: 100px;
+    left: 800px;
+    width: 400px;
+    height: 300px;
   }
   main .videos-conf {
     display: flex;
@@ -343,7 +391,7 @@ main .contacto-config textarea {
     text-align: left;
     display: flex;
     align-items: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   header .menu-principal img {
     background-color: rgb(0, 0, 0);
@@ -364,7 +412,7 @@ main .contacto-config textarea {
     color: black;
     margin-left: 5px;
     margin-right: 5px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
     text-align: right;
   }
   header .link a {
@@ -381,36 +429,39 @@ main .contacto-config textarea {
     position: relative;
     top: 0px;
   }
-  main img {
+  main .carousel-inner img {
     width: 450px;
     height: 300px;
-    text-align: left;
     margin: 10px;
     padding: 0px;
     border-radius: 10px;
     position: relative;
     left: 75px;
+    color: black;
+    border-style: solid;
+    border-radius: 10px;
   }
   main p {
     color: black;
-    font-size: 12px;
+    font-size: 10px;
     text-align: center;
     margin: 30px;
-    margin-top: 30px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-top: 20px;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   main h2 {
     text-align: center;
     font-size: 20px;
     margin-top: 0px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    background-color: rgb(226, 202, 202);
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(236, 236, 236);
   }
   main h3 {
     font-size: 15px;
     text-align: center;
     margin-top: 10px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #08f;
   }
   main ul {
     list-style-type: none;
@@ -460,6 +511,43 @@ main .contacto-config textarea {
     margin-left: 30px;
     border-radius: 5px;
     font-size: 12px;
+  }
+  @keyframes moverAvion {
+    100% {
+      transform: translateX(450px);
+    }
+  }
+  @keyframes moverPersonas {
+    0% {
+      transform: rotate(-5deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    100% {
+      transform: translateX(5deg);
+    }
+  }
+  main .contacto-config .icons-auto {
+    animation-name: moverAvion;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: fixed;
+    bottom: 400px;
+    left: 300px;
+    width: 75px;
+    height: 40px;
+  }
+  main .contacto-config .icons-equipaje {
+    animation-name: moverPersonas;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    position: fixed;
+    bottom: 210px;
+    left: 400px;
+    width: 250px;
+    height: 150px;
   }
   main .videos-conf {
     display: flex;
@@ -542,7 +630,7 @@ main .contacto-config textarea {
     text-align: left;
     display: flex;
     align-items: center;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   header .menu-principal img {
     background-color: rgb(0, 0, 0);
@@ -563,13 +651,13 @@ main .contacto-config textarea {
     color: black;
     margin-left: 5px;
     margin-right: 5px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   header .link a {
     background-color: rgb(196, 204, 198);
     border-radius: 2px;
     padding: 1px;
-    margin: 5px;
+    margin: 1px;
     width: 50px;
   }
   header .link a :hover {
@@ -580,7 +668,7 @@ main .contacto-config textarea {
     position: relative;
     top: 0px;
   }
-  main img {
+  main .carousel-inner img {
     width: 200px;
     height: 150px;
     text-align: left;
@@ -589,27 +677,30 @@ main .contacto-config textarea {
     border-radius: 10px;
     position: relative;
     left: 40px;
+    color: black;
+    border-style: solid;
   }
   main p {
     color: black;
-    font-size: 10px;
+    font-size: 7px;
     text-align: center;
-    margin: 30px;
+    margin: 10px;
     margin-top: 15px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   }
   main h2 {
     text-align: center;
     font-size: 15px;
-    margin-top: 20px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    background-color: rgb(226, 202, 202);
+    margin-top: 0px;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    background-color: rgb(236, 236, 236);
   }
   main h3 {
     text-align: center;
     font-size: 10px;
-    font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-    margin-top: 0px;
+    font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+    margin-top: 10px;
+    text-shadow: 0 0 1px #fff, 0 0 5px #fff, 0 0 10px #08f;
   }
   main ul {
     list-style-type: none;
@@ -619,8 +710,8 @@ main .contacto-config textarea {
     font-size: 10px;
   }
   main .icons {
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     position: relative;
     left: 0px;
     margin: 0%;
@@ -659,6 +750,43 @@ main .contacto-config textarea {
     margin-left: 30px;
     border-radius: 5px;
     font-size: 10px;
+  }
+  @keyframes moverAuto {
+    100% {
+      transform: translateX(400px);
+    }
+  }
+  @keyframes moverEquipaje {
+    0% {
+      transform: rotate(-5deg);
+    }
+    50% {
+      transform: rotate(10deg);
+    }
+    100% {
+      transform: translateX(5deg);
+    }
+  }
+  main .contacto-config .icons-auto {
+    animation-name: moverAuto;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: fixed;
+    bottom: 350px;
+    left: 150px;
+    width: 75px;
+    height: 40px;
+  }
+  main .contacto-config .icons-equipaje {
+    animation-name: moverEquipaje;
+    animation-duration: 15s;
+    animation-iteration-count: infinite;
+    position: fixed;
+    bottom: 210px;
+    left: 200px;
+    width: 150px;
+    height: 100px;
   }
   main .videos-conf {
     display: flex;
