--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,10 +1,22 @@
+/* Variables */
+$title-font: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+
+/* mixin */
+@mixin sizes($width, $height) {
+  width: $width;
+  height: $height;
+}
+
 * {
     margin: 0;
     padding: 0;
   }
 
   body {
-    background-color: rgb(246, 173, 173);
+    height: 100vh;
+    margin: 0;
+    background: linear-gradient(to bottom, lightblue, white, lightblue);
   }
 
   #videoprincipal {
