--- a/scss/medias-queries/_media-desktop.scss
+++ b/scss/medias-queries/_media-desktop.scss
@@ -254,4 +254,14 @@
     
     }
     }
+    footer {
+      text-align: center; /* Centra el texto */
+      font-size: 16px; /* Tamaño del texto */
+      font-family: Arial, sans-serif; /* Tipo de fuente */
+      font-weight: bold;
+      background: linear-gradient(to right, #bdc3c7, #2c3e50); /* Degradado del texto */
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent; /* Hace el texto transparente para que se vea el degradado */
+  }
   }
